text and pictiures aligned, margins fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,35 @@ textarea {
 	border-color: rgb(136, 123, 123);
 	color: rgb(136, 123, 123);
 }
+
+/*about*/
+
+.picture{
+
+max-width: 100%;
+padding-right: 50px;
+padding-left: 50px;
+padding-bottom: 50px;
+padding-top: 50px;
+}
+
+.text{
+
+padding-left: 80px;
+padding-right: 80px;
+padding-top: 50px;
+padding-bottom: 50px;
+
+}
+
+h5{
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+/*contact*/
+
+h4{
+    padding-top: 25px;
+}
